<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/textForname"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/text_forname_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textSurname"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/text_surname_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textForname"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textPhonenumber"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/text_phonenumber_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textSurname"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textStreet"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/text_street_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSurname" />

    <EditText
        android:id="@+id/textNumber"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/text_number_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhonenumber" />

    <EditText
        android:id="@+id/textPostcode"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/text_postcode_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStreet" />

    <EditText
        android:id="@+id/textCity"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/text_city_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumber" />

    <Button
        android:id="@+id/button_addPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/button_add_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>