<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/system_accent2_800"
        android:text="@string/button_search_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/system_accent2_800"
        android:text="@string/button_add_text"
        app:layout_constraintEnd_toStartOf="@+id/button_deleteContact"
        app:layout_constraintStart_toEndOf="@+id/button_search"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="390dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayoutContact"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_search">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/system_accent2_500"
                    android:text="@string/text_forname_hint"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/system_accent2_500"
                    android:text="@string/text_surname_hint"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/system_accent2_500"
                    android:text="@string/text_phonenumber_hint"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/system_accent2_500"
                    android:text="@string/text_address_hint"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_deleteContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@android:color/system_accent2_800"
        android:text="@string/button_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/contact_text_info"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>